--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -392,7 +392,7 @@ function show_simulation() {
     // Add Loop here link
     $('#permalink').html(
         $('<a />', {
-            'href' : "{{ url_for('indi_allsky.camera_simulator_view') }}?lens=" + $("#LENS_SELECT").val() + "&sensor=" + $("#SENSOR_SELECT").val(),
+            'href' : "{{ url_for('indi_allsky.camera_simulator_view') }}?lens=" + $("#LENS_SELECT").val() + "&sensor=" + $("#SENSOR_SELECT").val() + "&offset_x=" + $("#OFFSET_X").val() + "&offset_y=" + $("#OFFSET_Y").val(),
             'target' : '_blank',
             'rel'    : 'noopener noreferrer',
         }).html(
@@ -406,7 +406,7 @@ function show_simulation() {
 
     if (window.history.replaceState) {
        //prevents browser from storing history with each change:
-       window.history.replaceState({}, null, "{{ url_for('indi_allsky.camera_simulator_view') }}?lens=" + $("#LENS_SELECT").val() + "&sensor=" + $("#SENSOR_SELECT").val());
+       window.history.replaceState({}, null, "{{ url_for('indi_allsky.camera_simulator_view') }}?lens=" + $("#LENS_SELECT").val() + "&sensor=" + $("#SENSOR_SELECT").val() + "&offset_x=" + $("#OFFSET_X").val() + "&offset_y=" + $("#OFFSET_Y").val());
     }
 }
 
