move camera selection to upper-left navigation

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -15,11 +15,31 @@
     <div class="row vh-100 overflow-auto">
         <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
             <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
-                <a id="indi_allsky_anchor" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none" href="https://github.com/aaronwmorris/indi-allsky" target="_blank">
-                    <div class="fs-5 d-none d-sm-inline">
-                        <img src="{{ url_for('indi_allsky.static', filename='images/logo_outline_full.png') }}" height="100" alt="indi-allsky">
+                <div>
+                    <a id="indi_allsky_anchor" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none" href="https://github.com/aaronwmorris/indi-allsky" target="_blank">
+                        <div class="fs-5 d-none d-sm-inline">
+                            <img src="{{ url_for('indi_allsky.static', filename='images/logo_outline_full.png') }}" height="100" alt="indi-allsky">
+                        </div>
+                    </a>
+                </div>
+
+                <div class="d-none d-sm-inline" style="width:100%">
+                    <hr>
+                </div>
+
+                <div class="flex-shrink-1 d-sm-inline">
+                    <div class="text-warning d-none d-sm-inline" style="font-size:10px">Cameras Available: {{ camera_count }}</div>
+                    <div>
+                        <form id="form_camera_select" onSubmit="return false;">
+                            <div class="form-group row">
+                                <div class="col-sm-12">
+                                    {{ form_camera_select.CAMERA_SELECT(class='form-select bg-secondary', style='font-size: 12px;') }}
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </a>
+                </div>
+
                 <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
                     <li class="nav-item">
                         <a href="{{ url_for('indi_allsky.index_view') }}" class="nav-link px-sm-0 px-2">
@@ -135,17 +155,8 @@
                     {% endif %}
 
                 </ul>
+
                 <div class="py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1 d-none d-sm-inline">
-                    <div style="font-size:12px">Cameras Available: {{ camera_count }}</div>
-                    <div>
-                        <form id="form_camera_select" onSubmit="return false;">
-                            <div class="form-group row">
-                                <div class="col-sm-12">
-                                    {{ form_camera_select.CAMERA_SELECT(class='form-control bg-secondary') }}
-                                </div>
-                            </div>
-                        </form>
-                    </div>
                     <hr>
                     <div>{{ status_text|safe }}</div>
                     <div>{{ web_extra_text|safe }}</div>
