set form-select class on form selects

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -229,14 +229,14 @@ var sd = {
             {{ form_camera_simulator.LENS_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-3">
-            {{ form_camera_simulator.LENS_SELECT(class='form-control bg-secondary') }}
+            {{ form_camera_simulator.LENS_SELECT(class='form-select bg-secondary') }}
         </div>
 
         <div class="col-sm-1">
             {{ form_camera_simulator.SENSOR_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-3">
-            {{ form_camera_simulator.SENSOR_SELECT(class='form-control bg-secondary') }}
+            {{ form_camera_simulator.SENSOR_SELECT(class='form-select bg-secondary') }}
         </div>
 
         <div class="col-sm-1">
