--- a/indi_allsky/flask/templates/chart.html
+++ b/indi_allsky/flask/templates/chart.html
@@ -473,7 +473,7 @@ $( document ).ready(function() {
             {{ form_history.HISTORY_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_history.HISTORY_SELECT(class='form-control bg-secondary') }}
+            {{ form_history.HISTORY_SELECT(class='form-select bg-secondary') }}
         </div>
     </div>
 </form>
