--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -255,8 +255,8 @@ $( document ).ready(function() {
             <div>{{ form_focus.ZOOM_SELECT.label(class='col-form-label') }}</div>
         </div>
         <div class="col-sm-2">
-            <div>{{ form_focus.REFRESH_SELECT(class='form-control bg-secondary') }}</div>
-            <div>{{ form_focus.ZOOM_SELECT(class='form-control bg-secondary') }}</div>
+            <div>{{ form_focus.REFRESH_SELECT(class='form-select bg-secondary') }}</div>
+            <div>{{ form_focus.ZOOM_SELECT(class='form-select bg-secondary') }}</div>
         </div>
         <div class="col-sm-1">
             <div>{{ form_focus.X_OFFSET.label(class='col-form-label') }}</div>
