--- a/indi_allsky/flask/templates/log.html
+++ b/indi_allsky/flask/templates/log.html
@@ -119,13 +119,13 @@ $( document ).ready(function() {
             {{ form_logviewer.REFRESH_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_logviewer.REFRESH_SELECT(class='form-control bg-secondary') }}
+            {{ form_logviewer.REFRESH_SELECT(class='form-select bg-secondary') }}
         </div>
         <div class="col-sm-1">
             {{ form_logviewer.LINES_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_logviewer.LINES_SELECT(class='form-control bg-secondary') }}
+            {{ form_logviewer.LINES_SELECT(class='form-select bg-secondary') }}
         </div>
     </div>
 </form>
