--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -48,8 +48,8 @@ var lightbox = null;
         <div class="col-sm-1">
             {{ form_viewer.YEAR_SELECT.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-1">
-            {{ form_viewer.YEAR_SELECT(class='form-control bg-secondary') }}
+        <div class="col-sm-2">
+            {{ form_viewer.YEAR_SELECT(class='form-select bg-secondary') }}
             <div id="YEAR_SELECT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
 
@@ -57,7 +57,7 @@ var lightbox = null;
             {{ form_viewer.MONTH_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_viewer.MONTH_SELECT(class='form-control bg-secondary') }}
+            {{ form_viewer.MONTH_SELECT(class='form-select bg-secondary') }}
             <div id="MONTH_SELECT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
 
@@ -65,7 +65,7 @@ var lightbox = null;
             {{ form_viewer.DAY_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-1">
-            {{ form_viewer.DAY_SELECT(class='form-control bg-secondary') }}
+            {{ form_viewer.DAY_SELECT(class='form-select bg-secondary') }}
             <div id="DAY_SELECT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
 
@@ -73,7 +73,7 @@ var lightbox = null;
             {{ form_viewer.HOUR_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-1">
-            {{ form_viewer.HOUR_SELECT(class='form-control bg-secondary') }}
+            {{ form_viewer.HOUR_SELECT(class='form-select bg-secondary') }}
             <div id="HOUR_SELECT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
     </div>
