--- a/indi_allsky/flask/templates/loop.html
+++ b/indi_allsky/flask/templates/loop.html
@@ -207,14 +207,14 @@ $( document ).ready(function() {
             {{ form_history.HISTORY_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_history.HISTORY_SELECT(class='form-control bg-secondary') }}
+            {{ form_history.HISTORY_SELECT(class='form-select bg-secondary') }}
         </div>
 
         <div class="col-sm-1">
             {{ form_history.FRAMEDELAY_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_history.FRAMEDELAY_SELECT(class='form-control bg-secondary') }}
+            {{ form_history.FRAMEDELAY_SELECT(class='form-select bg-secondary') }}
         </div>
 
         <div class="col-sm-1">
