set form-select class on form selects

--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -119,7 +119,7 @@ var fullscreen = false;  //initial state
             {{ form_image_processing.CCD_BIT_DEPTH.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_image_processing.CCD_BIT_DEPTH(class='form-control bg-secondary') }}
+            {{ form_image_processing.CCD_BIT_DEPTH(class='form-select bg-secondary') }}
             <div id="CCD_BIT_DEPTH-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
@@ -147,7 +147,7 @@ var fullscreen = false;  //initial state
             {{ form_image_processing.SQM_FOV_DIV.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_image_processing.SQM_FOV_DIV(class='form-control bg-secondary') }}
+            {{ form_image_processing.SQM_FOV_DIV(class='form-select bg-secondary') }}
             <div id="SQM_FOV_DIV-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">Central region to use for SQM calculations (not used if ROI defined)</div>
@@ -288,7 +288,7 @@ var fullscreen = false;  //initial state
             {{ form_image_processing.IMAGE_STACK_COUNT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_image_processing.IMAGE_STACK_COUNT(class='form-control bg-secondary') }}
+            {{ form_image_processing.IMAGE_STACK_COUNT(class='form-select bg-secondary') }}
             <div id="IMAGE_STACK_COUNT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
@@ -301,7 +301,7 @@ var fullscreen = false;  //initial state
             {{ form_image_processing.IMAGE_STACK_METHOD.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_image_processing.IMAGE_STACK_METHOD(class='form-control bg-secondary') }}
+            {{ form_image_processing.IMAGE_STACK_METHOD(class='form-select bg-secondary') }}
             <div id="IMAGE_STACK_METHOD-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
@@ -366,7 +366,7 @@ var fullscreen = false;  //initial state
             {{ form_image_processing.CFA_PATTERN.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_image_processing.CFA_PATTERN(class='form-control bg-secondary') }}
+            {{ form_image_processing.CFA_PATTERN(class='form-select bg-secondary') }}
             <div id="CFA_PATTERN-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">Color Filter Array/Bayer Pattern</div>
@@ -377,7 +377,7 @@ var fullscreen = false;  //initial state
             {{ form_image_processing.SCNR_ALGORITHM.label(class='col-form-label') }}
         </div>
         <div class="col-sm-3">
-            {{ form_image_processing.SCNR_ALGORITHM(class='form-control bg-secondary') }}
+            {{ form_image_processing.SCNR_ALGORITHM(class='form-select bg-secondary') }}
             <div id="SCNR_ALGORITHM-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-7">
@@ -539,7 +539,7 @@ var fullscreen = false;  //initial state
             {{ form_image_processing.IMAGE_ROTATE.label(class='col-form-label') }}
         </div>
         <div class="col-sm-3">
-            {{ form_image_processing.IMAGE_ROTATE(class='form-control bg-secondary') }}
+            {{ form_image_processing.IMAGE_ROTATE(class='form-select bg-secondary') }}
             <div id="IMAGE_ROTATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-7">
