replace lens ID with random IDs

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -13,14 +13,14 @@ canvas {
 <script>
 // lens image circle diameter (mm)
 var icd = {
-    'zwo_f2.0_2.1mm'        :  6.7,
-    'zwo_f1.2_2.5mm'        :  6.7,
-    'arecont_f2.0_1.55mm'   :  4.8,
-    'stardot_f1.5_1.55mm'   :  4.8,
-    'm12_f2.0_1.44mm'       :  3.5,
-    'm12_f2.0_1.7mm'        :  5.6,
-    'm12_f2.0_1.8mm'        :  6.9,
-    'meike_f2.8_3.5mm'      : 12.5,
+    'bb2677ab' :  6.7,  // zwo_f2.0_2.1mm_1-3
+    '200331b0' :  6.7,  // zwo_f1.2_2.5mm_1-2
+    '790f0d27' :  4.8,  // arecont_f2.0_1.55mm_1-2
+    '8abf203f' :  4.8,  // stardot_f1.5_1.55mm_1-2
+    '4e9523e6' :  3.5,  // m12_f2.0_1.44mm_1-2.5
+    '92d9dba6' :  5.6,  // m12_f2.0_1.7mm_1-2.5
+    'c2f850cf' :  6.9,  // m12_f2.0_1.8mm_1-2.5
+    '1a4515cf' : 12.5,  // meike_f2.8_3.5mm_4-3
 }
 
 // sensor dimensions
