--- a/indi_allsky/flask/templates/generate.html
+++ b/indi_allsky/flask/templates/generate.html
@@ -181,7 +181,7 @@ $('#form_timelapsegen').on('submit', function() {
 
     $.ajax({
         type: "POST",
-        url: "{{ url_for('indi_allsky.ajax_timelapse_view') }}",
+        url: "{{ url_for('indi_allsky.ajax_generate_view') }}",
         contentType: "application/json",
         data: JSON.stringify(json_data),
         success: function(data){
