--- a/indi_allsky/flask/templates/generate.html
+++ b/indi_allsky/flask/templates/generate.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}indi-allsky: Generate Timelapse{% endblock %}
+{% block title %}indi-allsky: Generate{% endblock %}
 
 {% block head %}
 <meta charset="UTF-8">
