--- a/indi_allsky/flask/templates/timelapse_file.html
+++ b/indi_allsky/flask/templates/timelapse_file.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}indi-allsky: Timelapse{% endblock %}
+{% block title %}indi-allsky: {{ title }}{% endblock %}
 
 {% block head %}
 <meta charset="UTF-8">
@@ -10,6 +10,7 @@
 <script type="text/javascript">
 var video_id = {{ video_id }};
 var camera_id = {{ camera_id }};
+var file_view = "{{ file_view }}";
 </script>
 {% endblock %}
 
@@ -38,7 +39,7 @@ function init() {
     $('#permalink').html(
         $('<button />', {
             'class' : "badge pill bg-primary copy-clipboard",
-            'data-clipboard-text' : "{{ url_for('indi_allsky.timelapse_file_view', _external=True) }}?id=" + video_id + "&camera=" + camera_id,
+            'data-clipboard-text' : "{{ url_for(file_view, _external=True) }}?id=" + video_id + "&camera=" + camera_id,
         }).text('Copy Permalink to Clipboard')
     );
     $('#download').html(
