--- a/indi_allsky/flask/templates/watch_video.html
+++ b/indi_allsky/flask/templates/watch_video.html
@@ -8,14 +8,15 @@
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/clipboard.min.js') }}"></script>
 <script type="text/javascript">
-var video_id = {{ video_id }};
 var camera_id = {{ camera_id }};
+var night = {{ night }};
+var dayDate = "{{ dayDate }}";
 var file_view = "{{ file_view }}";
 </script>
 {% endblock %}
 
 {% block content %}
-<h3>{{ timeofday}} - {{ dayDate }}</h3>
+<h3>{{ timeofday}} - {{ dayDate_full }}</h3>
 
 <hr>
 
@@ -41,7 +42,7 @@ function init() {
     $('#permalink').html(
         $('<button />', {
             'class' : "badge pill bg-primary copy-clipboard",
-            'data-clipboard-text' : "{{ url_for(file_view, _external=True) }}?id=" + video_id + "&camera=" + camera_id,
+            'data-clipboard-text' : "{{ url_for(file_view, _external=True) }}?camera=" + camera_id + "&night=" + Number(night) + "&date=" + dayDate,
         }).text('Copy Permalink to Clipboard')
     );
     $('#download').html(
