--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -594,20 +594,6 @@ function init() {
                                 centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
 
 
-        $('#img_download').html(
-            $('<a />', {
-                'href'   : this.src,
-                'target' : '_blank',
-                'rel'    : 'noopener noreferrer',
-            }).html(
-                $('<span />', {
-                    'text'  : 'Image',
-                    'class' : "badge pill bg-info text-dark",
-                })
-            )
-        );
-
-
         $('#IMG_SELECT option').each(function(index, element) {
             if (element.value == $("#IMG_SELECT").val()) {
                 image_index = index;
@@ -617,6 +603,20 @@ function init() {
 
 
         if (image_index > -1) {
+            $('#img_download').html(
+                $('<a />', {
+                    'href'   : "{{ url_for('indi_allsky.timelapse_image_view')}}?camera={{ camera_id }}&id=" + image_data[image_index]['id'],
+                    'target' : '_blank',
+                    'rel'    : 'noopener noreferrer',
+                }).html(
+                    $('<span />', {
+                        'text'  : 'Image',
+                        'class' : "badge pill bg-info text-dark",
+                    })
+                )
+            );
+
+
             // Update exclude form
             $('#EXCLUDE_IMAGE_ID').val(image_data[image_index]['id']);
 
