add image viewer views

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -78,7 +78,7 @@
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/film.svg') }}" width="16" height="16" alt="Timelapse Viewer"><span class="ms-1 d-none d-sm-inline">Timelapses</span></a>
                             </li>
                             <li>
-                                <a href="{{ url_for('indi_allsky.panorama_view') }}" class="dropdown-item">
+                                <a href="{{ url_for('indi_allsky.latest_panorama_view') }}" class="dropdown-item">
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/aspect-ratio.svg') }}" width="16" height="16" alt="Panorama"><span class="ms-1 d-none d-sm-inline">Panorama</span></a>
                             </li>
                             <li>
