--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -693,7 +693,7 @@ function init() {
             if (image_data[image_index]['raw']) {
                 $('#raw_download').html(
                     $('<a />', {
-                        'href'   : image_data[image_index]['raw'],
+                        'href'   : "{{ url_for('indi_allsky.raw_image_view')}}?camera={{ camera_id }}&id=" + image_data[image_index]['raw_id'],
                         'target' : '_blank',
                         'rel'    : 'noopener noreferrer',
                         'class'  : "text-decoration-none link-warning",
@@ -712,7 +712,7 @@ function init() {
             if (image_data[image_index]['panorama']) {
                 $('#panorama_download').html(
                     $('<a />', {
-                        'href'   : image_data[image_index]['panorama'],
+                        'href'   : "{{ url_for('indi_allsky.panorama_image_view')}}?camera={{ camera_id }}&id=" + image_data[image_index]['panorama_id'],
                         'target' : '_blank',
                         'rel'    : 'noopener noreferrer',
                         'class'  : "text-decoration-none link-warning",
